tests/paczka1/fuzzy1/38550934.err
Error in line 7: hQbyS6E A51 86,6
Error in line 11: AG7FmZ A814 96,1
Error in line 17: O68 A264 63,2
Error in line 12: A814 A974 75,1
Error in line 18: pS2OvLWMSnK A264 85,0
Error in line 24: A814 A51 46,2
Error in line 28: A814 A2=4 199,2
Error in line 22: 0KQ A814 25,9
Error in line 26: A814 A264 66,4
